--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 zadeh==0.3.0
 matplotlib==3.6.1
-# PyPDF2==2.11.1
-# tabula-py==2.5.1
-# pdfminer==20191125
 openpyxl==3.0.10
+session-info==1.0.0
+ipywidgets==8.0.2
